# ODSAS

./: .gitignore  MyODSASINIfileGB.ini  ODSAS.ini  ODSAS_SBATCH.sh  ODSAS_WSL_Launcher_GB.sh  QGIS_VISUALIZATION.md  README.md  qgis_simple_style.py
in/: Moray_HighWater_15mPoint.gpkg  Moray_Processed_Output.csv  Moray_Processed_Output.gpkg  create_10m_buffer_1500m.tif
src/: 2d_point.cpp  2d_point.h  2d_shape.cpp  2d_shape.h  2di_point.cpp  2di_point.h  2di_shape.cpp  2di_shape.h  CMakeLists.txt  Makefile  calc_curvature.cpp  cell.cpp  cell.h  cell_landform.cpp  cell_landform.h  coast.cpp  coast.h  coast_landform.cpp  coast_landform.h  coast_polygon.cpp  coast_polygon.h  coast_statistics.cpp  coast_statistics.h  create_profiles.cpp  delineation.cpp  delineation.h  gis_raster.cpp  gis_utils.cpp  gis_vector.cpp  hermite_cubic.cpp  hermite_cubic.h  i_line.cpp  i_line.h  init_grid.cpp  line.cpp  line.h  locate_clifftop.cpp  locate_coast.cpp  multi_line.cpp  multi_line.h  (+16 more)
